--- a/Mod2_Solution/css/stylesheet.css
+++ b/Mod2_Solution/css/stylesheet.css
@@ -1,6 +1,8 @@
 
 * {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
 }
 .row 
 {
@@ -21,21 +23,52 @@
     background: lightslategray
 }
 
-.summarySection
+.white
 {
-    
+  background: antiquewhite
 }
 
-p
+.lightcoral
 {
-    width: 90%;
+  background: lightcoral
 }
 
-@media (min-width: 1200px) {
+.lightseagreen
+{
+  background: lightseagreen
+}
+.innerDiv
+{
+  margin: 10px;
+  border: 1px solid green;
+  height: 100%;
+  position: relative;
+}
+.sectionTitle
+{
+  position: absolute;
+  right: 0px;
+  margin: 0px;
+  border: 1px black solid;
+  font-size: 1.25em;
+}
+.sectionText
+{
+  padding : 5px;
+  position: relative;
+  top: 15px;
+}
+
+.pageTitle
+{
+  text-align: center;
+  font-size: 1.75em;
+}
+
+/* Adapted from course content */
+@media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
-    overflow: auto;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -46,7 +79,6 @@ p
   .col-lg-3 {
     width: 25%;
     padding: 5px;
-    margin: 4%;
   }
   .col-lg-4 {
     width: 33.33%;
@@ -78,11 +110,12 @@ p
   }
 }
 
+/* Adapted from course content */
 /********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
+    margin-bottom: 20px;
   }
   .col-md-1 {
     width: 8.33%;
@@ -95,8 +128,6 @@ p
   }
   .col-md-4 {
     width: 33.33%;
-    padding: 5px;
-    margin: 8%;
   }
   .col-md-5 {
     width: 41.66%;
